# zepyr_BGT60UTR11AIP

./: CMakeLists.txt  README.rst  combined.overlay  debug_export.py  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  radar_ui.py  requirements.txt  setup_ui.sh  sysbuild.conf  test_serial.py  uart_speed.overlay
micropython/: radar.py
src/: main.c  regs
